--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="keyboard_height">230dip</dimen>
+    <dimen name="keyboard_height">240dp</dimen>
     <dimen name="key_height">60dp</dimen>   <!--这里是代表一行的高度。-->
     <dimen name="keyboard_horizontalGap">1px</dimen>
     <dimen name="keyboard_verticalGap">1px</dimen>
