--- a/easykeyboard/src/main/res/drawable/no_pre.xml
+++ b/easykeyboard/src/main/res/drawable/no_pre.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-  <solid android:color="@color/white"/>
+  <solid android:color="#ffffff"/>
     <stroke android:color="#e4ebe8" android:width="0.5px"/>
 </shape>
