加入一些demo注释

--- a/app/src/main/res/layout/activity_systemkeyboard.xml
+++ b/app/src/main/res/layout/activity_systemkeyboard.xml
@@ -35,5 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        keyboard:keyViewbg="@drawable/edit_bg"
         keyboard:xmlLayoutResId="@xml/keyboard_numbers" />
 </RelativeLayout>
