--- a/easykeyboard/src/main/res/values/attrs.xml
+++ b/easykeyboard/src/main/res/values/attrs.xml
@@ -10,6 +10,7 @@
     <declare-styleable name="SystemKeyBoardEditText">
         <attr name="xmlLayoutResId"/>
         <attr name="keyViewbg"/>
+        <attr name="outSideCancel" format="boolean"/>
         <attr name="space" format="boolean"/>
     </declare-styleable>
 </resources>
