--- a/easykeyboard/src/main/res/values/attrs.xml
+++ b/easykeyboard/src/main/res/values/attrs.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="xmlLayoutResId" format="reference"/>
-    <!--<attr name="randomkeys" format="boolean"/>-->
+    <attr name="isRandom" format="boolean"/>
     <attr name="keyViewbg" format="reference"/>
     <declare-styleable name="SystemKeyboard">
         <attr name="xmlLayoutResId"/>
         <attr name="keyViewbg"/>
+        <attr name="isRandom"/>
     </declare-styleable>
     <declare-styleable name="SystemKeyBoardEditText">
         <attr name="xmlLayoutResId"/>
         <attr name="keyViewbg"/>
         <attr name="outSideCancel" format="boolean"/>
         <attr name="space" format="boolean"/>
+        <attr name="isRandom"/>
     </declare-styleable>
 </resources>
